fix top buttons zise on mobile

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -223,9 +223,14 @@ a, a.btn {
     min-height: 75px;
   }
 }
+
 @media(max-width:450px) {
   .logo {
     font-size: 35px;
     min-height: 90px;
+  }
+  .btn-consultation {
+    width: 120px;
+    padding: 2px;
   }
 }
